# jarvis

./: .env.example  .gitignore  AGENTS.md  README.md  Sir操作清单.md  TODO.md  audit_cursor_out.txt  audit_exam.txt  audit_intent.txt  audit_log_out.txt  audit_router.txt  audit_sd_out.txt  audit_sleep.txt  dashboard.ps1  hotfix_out.txt  install.bat  jarvis_acoustic_wake.py  jarvis_actionable_items.py  jarvis_affordance.py  jarvis_ambient_sensor.py  jarvis_anchors.py  jarvis_attention.py  jarvis_auto_arbiter.py  jarvis_blood.py  jarvis_body_focus.py  jarvis_callback_guard.py  jarvis_canonical_entities.py  jarvis_central_nerve.py  jarvis_chat_bypass.py  jarvis_claim_classifier.py  jarvis_claim_revision_log.py  jarvis_claim_tracer.py  jarvis_coherence_debt.py  jarvis_commitment_watcher.py  jarvis_companion_rhythm_reflector.py  jarvis_concern_dampen.py  jarvis_concern_feedback.py  jarvis_concern_feedback_reflector.py  jarvis_concern_summon.py  jarvis_concerns.py  (+120 more)
docs/: AGENT_HANDOFF_BETA5_REAL_TEST.md  AGENT_HANDOFF_PROTOCOL.md  AGENT_KICKOFF_BODY_DIFFERENTIATION.md  AGENT_KICKOFF_GRAND_RESHAPE.md  AGENT_KICKOFF_INTEGRITY_STACK.md  AGENT_KICKOFF_PROMPT.md  AGENT_KICKOFF_TEMPLATE.md  AGENT_KICKOFF_THINKING_DEHARDCODE.md  ARCHITECTURE_AUDIT_2026_05_16.md  AUDIT_PROTOCOL.md  BUGS_20260602_realmachine.md  JARVIS_AGENTS_GAP_ANALYSIS_2026_05_20.md  JARVIS_AGENT_MIRROR_TESTING.md  JARVIS_ANCHOR_AND_BOUNDARY.md  JARVIS_ANCHOR_DESIGN.md  JARVIS_ANCHOR_P0_ACTIVATION_WIRING_DESIGN.md  JARVIS_ANCHOR_PHASE1_HANDOFF.md  JARVIS_ANCHOR_PROGRESS.md  JARVIS_ANCHOR_REBUILD_P0_DESIGN.md  JARVIS_ANCHOR_SUBSYSTEM_SURVEY.md  JARVIS_ARCHITECTURE_MAP.md  JARVIS_ARCHITECTURE_MAP_AUTO.md  JARVIS_AUDIT_CARDS.md  JARVIS_BASIC_ELECTRONICS_PLAN.md  JARVIS_BETA6_UNIFIED_THINKING.md  JARVIS_BODY_ARCHITECTURE_MAP.md  JARVIS_BYPASS_FALSE_POSITIVE_DIAG.md  JARVIS_CLOSURE_AND_RELATIONAL_UPLIFT_DESIGN.md  JARVIS_CLOSURE_PROGRESS.md  JARVIS_COUPLING_MATRIX.md  JARVIS_DASHBOARD_AUTO_ACTIVE_DESIGN.md  JARVIS_DASHBOARD_REBUILD_AUDIT.md  JARVIS_DATAFLOW_MAP.md  JARVIS_DEEP_AUDIT_2026_05_20.md  JARVIS_DESKTOP_COPILOT_DESIGN.md  JARVIS_DIALOGUE_20260529_DIGITAL_LIFE.md  JARVIS_DIRECTIVE_SELF_AWARENESS.md  JARVIS_DYNAMIC_MAP_AND_SELF_DEBUG_DESIGN.md  JARVIS_EMERGENCE_AND_LOOPS.md  JARVIS_ENERGY_GROUNDING_DESIGN_P2.md  (+74 more)
jarvis_config/: concern_nudge_map.json  keys.py  network.json
l2_eyes_pool/: l2_desktop_eyes.py  l2_memory_eyes.py  l2_system_eyes.py  l2_terminal_eyes.py  l2_web_eyes.py  (+2 more)
(+856 files in other folders)
